package com.citizen_authentication.models.enums;

public enum CartType {
    CIN,
    PASSPORT
}
