package com.citizen_authentication.models.enums;

public enum RoleName {
    USER, ADMIN
}
